[gd_scene load_steps=5 format=3 uid="uid://wd3kxbq4ny8o"]

[ext_resource type="Script" uid="uid://dd3djee7h730r" path="res://scenes/components/image/url_texture_rect.gd" id="1_x30d1"]
[ext_resource type="PackedScene" uid="uid://bx5ptka143dq2" path="res://scenes/components/loading/loading_spinner.tscn" id="2_yy0gs"]
[ext_resource type="Texture2D" uid="uid://c1agfu63pnrj6" path="res://asset/icon/circle-grey.svg" id="3_rv6mi"]
[ext_resource type="Texture2D" uid="uid://cufkwi4pv7wvq" path="res://asset/icon/image-broken.svg" id="3_y7nus"]

[node name="UrlTextureRect" type="TextureRect"]
custom_minimum_size = Vector2(128, 128)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 4
stretch_mode = 5
script = ExtResource("1_x30d1")

[node name="LoadingSpinner" parent="." instance=ExtResource("2_yy0gs")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_progress = ExtResource("3_rv6mi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ErrorTexture" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_y7nus")
expand_mode = 2
stretch_mode = 5
